--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
             <version>3.141.59</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.3.3</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
