--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
             <artifactId>rest-assured</artifactId>
             <version>4.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>4.3.3</version>
+        </dependency>
 
 
     </dependencies>
