--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,12 @@
         <browser.version>${browser.version}</browser.version>
         <driver.name>${driver.name}</driver.name>
         <driver.path>${driver.path}</driver.path>
-        <aspectj.version>1.8.10</aspectj.version>
+        <aspectj.version>1.9.6</aspectj.version>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
+        <java.version>14</java.version>
     </properties>
 
     <build>
@@ -24,23 +29,24 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>14</source>
+                    <target>14</target>
+<!--                    <compilerArgs>enable-preview</compilerArgs>-->
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.javalite</groupId>
-                <artifactId>activejdbc-instrumentation</artifactId>
-                <version>2.5-j8</version>
-                <executions>
-                    <execution>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>instrument</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.javalite</groupId>-->
+<!--                <artifactId>activejdbc-instrumentation</artifactId>-->
+<!--                <version>2.5-j8</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <phase>process-classes</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>instrument</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -48,6 +54,7 @@
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <argLine>
+                        -Dfile.encoding=UTF-8
                         -Dbrowser=${browser} -Dbrowser.version=${browser.version} -D${driver.name}=${driver.path}
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
@@ -68,6 +75,8 @@
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjweaver</artifactId>
                         <version>${aspectj.version}</version>
+                        <scope>compile</scope>
+                        <optional>true</optional>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -184,15 +193,20 @@
         <dependency>
             <groupId>aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.5.4</version>
+            <version>${aspectj.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/aspectj-${aspectj.version}.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.8.8</version>
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-rest-assured</artifactId>
             <version>2.13.9</version>
         </dependency>
-
-
     </dependencies>
 
 </project>
